--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,13 @@
     "require": {
         "php": ">=7.0.0",
         "fideloper/proxy": "~3.3",
+        "guzzlehttp/psr7": "^1.4",
+        "happyr/linkedin-api-client": "^1.0",
         "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "php-http/curl-client": "^1.7",
+        "php-http/guzzle6-adapter": "^1.1",
+        "php-http/message": "^1.6"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
